--- a/src/app/_components/dashboard/sidebar/sidebar.module.css
+++ b/src/app/_components/dashboard/sidebar/sidebar.module.css
@@ -1,1 +1,28 @@
-    
+.container{
+    position: sticky;
+    top: 3rem;
+}
+
+.user{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.userImage{
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.userDetail{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.userName{
+    font-weight: 500;
+
+}
+.userTitle{
+    background-color: var(--bgSoft);
+}
